cert-manager/tomcat/tomcat.yml
###########################################################################
# NameSpace
###########################################################################
---
apiVersion: v1
kind: Namespace
metadata:
  name: tomcat
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat
  namespace: tomcat
  annotations:
    kubernetes.io/ingress.class: nginx
    name: tomcat
    namespace: tomcat
    # letsencrypt support enabled (https://github.com/jetstack/kube-lego)
    #kubernetes.io/tls-acme: "true"
    # use the Kubernetes ingress "nginx"
    #kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tomcat-tls-prod
    hosts:
    -  tomcat.psamman.com
  rules:
  - host: tomcat.psamman.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat-svc
          servicePort: 8080   
###########################################################################
# Services
###########################################################################
---
apiVersion: v1
kind: Service
metadata:
  namespace: tomcat
  name: tomcat-svc
  labels:
    service: tomcat-svc-label
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app-server: tomcat
###########################################################################
# Deployment
###########################################################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tomcat
  name: tomcat8-deployment
  labels:
    app: tomcat8
spec:
  selector:
    matchLabels:
      app-server: tomcat
  replicas: 1
  template:
    metadata:
      labels:
        app-server: tomcat
    spec:
      containers:
      - name: tomcat-container
        image: tomcat:8
        ports:
        - containerPort: 8080
      restartPolicy: Always
